--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -1,10 +1,11 @@
 .calendar {
-    grid-area: calendar;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(4, 1fr);
+    text-align: center;
+    margin-left: 1em;
 }
 
-.dow {
-    text-align: center;
+.calendar>* {
+    border: 1px solid rgb(167, 167, 167);
 }
