Finished all basic functionalities
- Avoid duplicate to-do list entries. Added UI element
for prompts when that happens
- Fix bugs with using list length as to-do list entry IDs
by adding a ID tracker in `listState`
- Finished and added basic styling with `WeatherContainer`

All elements in this commit should be fully functional.

TODO:
- Additional styling: background, custom border,
potentially custom scroll bar for to-do list, make
forecast easier to read
- Add links to program schedule
- [Stretch goal] Add weather icon to forecast

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,11 @@
 .frame {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: min-content max-content;
+  grid-template-rows: min-content max-content min-content;
   grid-template-areas:
-    "header header"
-    "calendarGrid todo";
+    "headerContainer headerContainer"
+    "calendarContainer todoContainer"
+    "weatherContainer weatherContainer";
+  margin-left: 2em;
+  margin-right: 2em;
 }
