--- a/src/components/toDo/ToDoInput.css
+++ b/src/components/toDo/ToDoInput.css
@@ -1,3 +1,10 @@
 input[type=text] {
     width: 100%;
+    margin-bottom: 0.1em;
+}
+
+#duplicate {
+    font-size: 0.9em;
+    display: none;
+    color: rgb(192, 76, 132);
 }
