--- a/src/components/toDo/ToDoList.css
+++ b/src/components/toDo/ToDoList.css
@@ -1,3 +1,13 @@
+h3 {
+    margin-top: 0;
+}
+
+ul {
+    padding-left: 0;
+    overflow-y: scroll;
+    height: 55%;
+}
+
 .todoList {
     list-style: none;
     display: grid;
