--- a/src/calendar/CalendarContainer.css
+++ b/src/calendar/CalendarContainer.css
@@ -8,6 +8,9 @@
     grid-template-rows: repeat(4, 1fr);
     text-align: center;
     margin-left: 1em;
+    border: 10px solid transparent;
+    border-image: url('http://www.clker.com/cliparts/V/B/T/z/T/r/bike-chain-border.svg.hi.png') 40 repeat;
+
 }
 
 .calendar>* {
