--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,23 @@
   margin-left: 2em;
   margin-right: 2em;
 }
+
+@media screen and (max-width: 1023px) {
+  .frame {
+    grid-template-columns: min-content;
+    grid-template-rows: repeat(4, min-content);
+    grid-template-areas:
+      "headerContainer"
+      "calendarContainer"
+      "todoContainer"
+      "weatherContainer";
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 1023px) {
+  .frame {
+    justify-content: center;
+  }
+}
