--- a/src/todo/ToDoInput.css
+++ b/src/todo/ToDoInput.css
@@ -1,10 +1,22 @@
 input[type=text] {
     width: 100%;
     margin-bottom: 0.1em;
+    padding: 0.2em;
 }
 
 #duplicate {
     font-size: 0.9em;
     display: none;
     color: rgb(192, 76, 132);
+}
+
+@media screen and (max-width: 480px) {
+    form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    input[type=text] {
+        width: 95%;
+    }
 }
